# stereo

./: Discovering.md  ProjectHome.md  README.md  how
stereo-0.2b-1/: ANNOUNCE  BUGS  INSTALL  Makefile  Makefile.am  Makefile.in  PROGRAMMING  USAGE  VERSION  acconfig.h  config.cache  config.h  config.h.in  config.status  configure  configure.ac  configure.in  global.h  stereo.lsm  stereo_grass.txt
stereo-0.2b-1/MSc/: README  msc0.ps  msc1.ps  msc10.ps  msc11.ps  msc14.ps  msc16.ps  msc18.ps  msc21.ps  msc22.ps  msc23.ps  msc24.ps  msc25.ps  msc28.ps  msc30.ps  msc31.ps  msc32.ps  msc34.ps  msc4.ps  msc40.ps  msc42.ps  msc43.ps  msc45.ps  msc46.ps  msc47.ps  msc49.ps  msc5.ps  msc50.ps  msc6.ps  msc8.ps
stereo-0.2b-1/bitmap/: camera.bitmap  campsi.bitmap  camtheta.bitmap  camxy.bitmap  camz.bitmap  cool.bitmap  exclam.bitmap
stereo-0.2b-1/images/test/: b.tiff  b.tiff.thumb.tga
stereo-0.2b-1/main/: Makefile  Makefile.am  Makefile.in  all.txt  callback.c  callback.h  desktop.h  display.c  displaycam.c  displaycam.h  fitline.c.bak  fitline.c.nonlinear  hugeimage.c  hugeimage.h  imagehandler.c  join.h  loadcalfile.h  marker.c  marker.h  matrix.c  output.c  output.h  picsetup.h
stereo-0.2b-1/test_data/: lee.txt
stereo-0.2b-1/widget/: 3dinit.c  3dinit.h  3dkit.c  3dkit.c.org  3dkit.h  ClientWin.c  Makefile  Makefile.am  Makefile.in  clearevents.c  cmdlineopt.c  cmdlineopt.h  compatable.c  coollocal.h  coolview.c  coolwidget.c  coolwidget.h  dialog.c  dialog.h  dirtools.h  disable.c  dnd.c  drawings.h  editmenu.c  editoptions.h  editwidget.c  filebrowser.c  focus.c  grlib.c  hintpos.c  imagewidget.c  mad.c  manpage.c  mathfuncs.c  options.c  quickmath.h  regex.c  stringtools.c  stringtools.h  triangl.c  (+4 more)
stereo_2/: AECI_DISCLAIMER  AUTHORS  ChangeLog  Makefile  Makefile.in  NEWS  README  TODO  TODO.tasks  config.cache  config.h.in~  configure  desktop  mkinstalldirs  usage_stereo_grass.txt
stereo_2/MSc/: msc12.ps  msc13.ps  msc15.ps  msc17.ps  msc19.ps  msc2.ps  msc20.ps  msc26.ps  msc27.ps  msc29.ps  msc3.ps  msc33.ps  msc35.ps  msc36.ps  msc37.ps  msc38.ps  msc39.ps  msc41.ps  msc44.ps  msc48.ps  msc7.ps  msc9.ps
stereo_2/autom4te.cache/: output.0  output.1  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
stereo_2/bitmap/: camf.bitmap  camphi.bitmap  camsig.bitmap  cross.bitmap  tick.bitmap
stereo_2/converttiff/: Makefile  tiff2tga.c
stereo_2/cursor/: README.dnd
stereo_2/images/test/: a.tiff  a.tiff.thumb.tga  cal.txt
stereo_2/main/: Makedoc.sh  calibrate.c  calibrate.h  camera.c  camera.h  desktop.c  display.h  fitline.c  fitline.h  imagefit.c  imagefit.h  imagehandler.h  join.c  loadcalfile.c  matrix.h  picsetup.c  savewindow.c  simplex.c  simplex.h
stereo_2/test_data/: 3dtest.txt
stereo_2/widget/: 3dkit.c  3dkit.h  3dtext.c  Makefile  Makefile.am  all.txt  app_glob.c  bitmapbutton.c  coolnext.c  copyright.h  dirtools.c  drawings.c  edit.c  edit.h  edit_key_translator.c  editcmd.c  editcmddef.h  editdraw.c  imagewidget.h  initapp.c  lkeysym.h  loadfile.c  loadtiff.c  mad.h  menu.c  my_string.h  options.h  pipe.c  quickmath.c  textwidget.c  tri.c  triangle.h  widget3d.h
stereo_2/widget/.deps/: 3dkit.Po
