noinst_LIBRARIES = libcw.a
# ou .la

libcw_a_SOURCES = 3dinit.c 3dinit.h 3dkit.c 3dkit.h 3dtext.c ClientWin.c \
	bitmapbutton.c cachedraw.c clearevents.c cmdlineopt.c \
	cmdlineopt.h compatable.c coollocal.h coolnext.c \
	coolwidget.c coolwidget.h copyright.h dialog.c dialog.h dirtools.c \
	dirtools.h disable.c dnd.c drawings.c drawings.h edit.c edit.h \
	editcmd.c editcmddef.h editdraw.c \
	editlearnkeys.c editmenu.c editoptions.c editoptions.h editwidget.c \
	filebrowser.c focus.c grlib.c hintpos.c imagewidget.c imagewidget.h \
	initapp.c lkeysym.h loadfile.c loadfile.h loadtiff.c loadtiff.h \
	mad.c mad.h manpage.c mathfuncs.c menu.c my_string.h options.c \
	options.h pipe.c quickmath.c quickmath.h regex.c regex.h striangle.c \
	stringtools.c stringtools.h swtriangle.c textwidget.c \
	triangle.c triangle.h vga.h vgagl.h widget3d.c \
	widget3d.h wrapsurf.c wtriangle.c

